# moji-todo

./: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: prefix.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: task.rs
src-tauri/src/store/: mod.rs  task.rs
src/app/: globals.css  layout.tsx  page.tsx  theme.tsx
src/components/: progress-bar.tsx  task-list.tsx  task.tsx
src/components/ui/: index.ts  progress.tsx
src/lib/: win-display-controller.tsx
src/tauri/: cmds.ts
src/utils/: env.ts  strings.spec.ts  strings.ts
